# VizIt

./: .gitignore  README.md  cli.py  pyproject.toml  test.csv
vizit/: ingestion.py  logging.py
vizit/exec_tools/: __init__.py  code_executor.py
vizit/pipeline/: pipeline.py
vizit/preprocessing/: preprocessing_agent.py
vizit/stages/analysis/: analysis.py
vizit/stages/preprocessing/: preprocessing_agent.py
vizit/stages/viz_code/: viz_code_agent.py
vizit/stages/viz_suggestion/: viz_suggestion_agent.py
vizit/viz_code/: viz_code_agent.py
vizit/viz_suggestion/: viz_suggestion_agent.py
