[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vizit"
version = "0.1.0"
description = "AI-driven data visualization pipeline using Orion and OpenAI."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Saumya Verma", email = "saumyaverma29@gmail.com" }
]
dependencies = [
  "orion-core",
  "pandas",
  "openai",
  "plotly",
  "requests"
]

[project.urls]
Homepage = "https://github.com/sverma2903/VizIt"
